[gd_scene load_steps=6 format=2]

[ext_resource path="res://client/common/GameBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/player_order/PlayerOrderState.gd" type="Script" id=2]
[ext_resource path="res://common/Log.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/LoadingLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/common/Camera2D.tscn" type="PackedScene" id=5]

[node name="PlayerOrderState" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="GameBackground" parent="UICanvasLayer" instance=ExtResource( 1 )]

[node name="InfoLabel" type="Label" parent="UICanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -210.0
margin_right = -39.9999
margin_bottom = -110.0
rect_scale = Vector2( 2, 2 )
text = "Player order will be determined first.

Player last in the order will select their character first.  The first player in the order will take the first turn.

The player order is:"
align = 1
autowrap = true

[node name="PlayerOrderLabel" type="Label" parent="UICanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 70.0
rect_scale = Vector2( 2, 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="UICanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = 90.0
margin_right = 10.0
margin_bottom = 125.0
rect_scale = Vector2( 2, 2 )
text = "Continue"

[node name="WaitingLabel" type="Label" parent="UICanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 190.0
margin_right = 0.00012207
margin_bottom = 220.0
rect_scale = Vector2( 2, 2 )
text = "Waiting for other players..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" parent="UICanvasLayer" instance=ExtResource( 3 )]

[node name="LoadingLabel" parent="UICanvasLayer" instance=ExtResource( 4 )]
